Streamline E4 CSS Core and E4 CSS SWT and remove URI re-implementation